--- a/src/views/gameplay.html
+++ b/src/views/gameplay.html
@@ -19,10 +19,10 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
       /* Socket connection */
-      var socket = io('http://192.168.1.212:4000');
-      var ip = 'http://192.168.1.212:4000';
-      //var socket = io('localhost:4000');
-      //var ip = 'http://localhost:4000';
+      //var socket = io('http://192.168.1.212:4000');
+      //var ip = 'http://192.168.1.212:4000';
+      var socket = io('localhost:4000');
+      var ip = 'http://localhost:4000';
       socket.on('hello', function (data) {
         console.log(data);
       });
@@ -191,16 +191,16 @@
           heightmap.forEach(function(item) {
             if(item.value == playerData[0].height) {
               player1h = item.key;
-            }
+            } else player1h = '';
             if(item.value == playerData[1].height) {
               player2h = item.key;
-            }
+            } else player1h = '';
             if(item.value == playerData[2].height) {
               player3h = item.key;
-            }
+            } else player1h = '';
             if(item.value == playerData[3].height) {
               player4h = item.key;
-            }            
+            } else player1h = '';           
           });
 
           // display player height from JSON file
@@ -408,6 +408,7 @@
             ingameState();
             console.log('ingame');
           } else if(data == 3) {
+            location.reload();
             console.log('end');
           } else {
             console.log('invalid currentState');
