--- a/src/views/guest.html
+++ b/src/views/guest.html
@@ -19,10 +19,10 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
       /* Socket connection */
-      var socket = io('http://192.168.1.212:4000');
-      var ip = 'http://192.168.1.212:4000';
-      //var socket = io('localhost:4000');
-      //var ip = 'http://localhost:4000';
+      //var socket = io('http://192.168.1.212:4000');
+      //var ip = 'http://192.168.1.212:4000';
+      var socket = io('localhost:4000');
+      var ip = 'http://localhost:4000';
       socket.on('hello', function (data) {
         console.log(data);
       });
@@ -138,6 +138,7 @@
       });
 
       function updatePlayerData() {
+        console.log("updatePlayerData");
         $.getJSON( ip + "/config", function( data ) {
           var playerData = data["PLAYERS"];
 
@@ -218,15 +219,23 @@
           // Reflect stores values to form
           // ison
           if(playerData[0].ison == true) $('.mdl-js-switch')[0].MaterialSwitch.on();
+          else $('.mdl-js-switch')[0].MaterialSwitch.off();
           if(playerData[1].ison == true) $('.mdl-js-switch')[1].MaterialSwitch.on();
+          else $('.mdl-js-switch')[1].MaterialSwitch.off();
           if(playerData[2].ison == true) $('.mdl-js-switch')[2].MaterialSwitch.on();
+          else $('.mdl-js-switch')[2].MaterialSwitch.off();
           if(playerData[3].ison == true) $('.mdl-js-switch')[3].MaterialSwitch.on();
+          else $('.mdl-js-switch')[3].MaterialSwitch.off();
 
           // gender
           if(playerData[0].gender == 2) $('.mdl-js-radio')[1].MaterialRadio.check();
+          else $('.mdl-js-radio')[0].MaterialRadio.check();
           if(playerData[1].gender == 2) $('.mdl-js-radio')[3].MaterialRadio.check();
+          else $('.mdl-js-radio')[2].MaterialRadio.check();
           if(playerData[2].gender == 2) $('.mdl-js-radio')[5].MaterialRadio.check();
+          else $('.mdl-js-radio')[4].MaterialRadio.check();
           if(playerData[3].gender == 2) $('.mdl-js-radio')[7].MaterialRadio.check();
+          else $('.mdl-js-radio')[6].MaterialRadio.check();
         });
       }
 
@@ -264,9 +273,6 @@
 
         // disable all fields
         disableFields();
-
-        // toggle ready switch off
-        $('.mdl-js-switch')[4].MaterialSwitch.off();
       }
 
       function disableFields() {
@@ -337,9 +343,6 @@
           dialog.close();
         });
         // end warning message dialogue
-
-        /* Display server data on page load */
-        updatePlayerData();
 
         /* Player heights */
         heightmap.forEach(function(item) {
@@ -887,6 +890,7 @@
             ingameState();
             console.log('ingame');
           } else if(data == 3) {
+            location.reload();
             console.log('end');
           } else {
             console.log('invalid currentState');
