forgot to attach handshake to button

--- a/src/views/guest.html
+++ b/src/views/guest.html
@@ -935,7 +935,7 @@
 
         /* Submit button */
         $( "#check-computers" ).click(function() {
-          location.reload();
+          socket.emit('sendHandshakeToPlayer', { my: 'data' });
         });
       });
     </script>
