updated index page UI

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,27 +16,49 @@
     <script src="./js/dialog-polyfill.js"></script>
   </head>
   <body>
-    <div class="mdl-grid mdl-center">
+    <div class="mdl-grid header">
+      <div class="mdl-cell mdl-cell--12-col mdl-center">
+        <h1>Museum of Sex</h1>
+        <h3>Virtual Reality</h3>
+      </div>
+    </div>
+    <div class="mdl-grid mdl-center player-data">
       <div class="mdl-cell mdl-cell--12-col mdl-center">
         <a href="/guest">
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent scenebutton">
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored scenebutton">
             Guest
           </button>
         </a>
       </div>
       <div class="mdl-cell mdl-cell--12-col mdl-center">
+        <b>Player entry page</b><br>
+        Player names, heights, and genders   
+      </div>
+    </div>
+    <div class="mdl-grid mdl-center">
+      <div class="mdl-cell mdl-cell--12-col mdl-center">
         <a href="/gameplay">
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent scenebutton">
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored scenebutton">
             Gameplay
           </button>
         </a>
       </div>
       <div class="mdl-cell mdl-cell--12-col mdl-center">
+        <b>Gameplay control panel</b><br>
+        VR experience only
+      </div>
+    </div>
+    <div class="mdl-grid mdl-center player-data">
+      <div class="mdl-cell mdl-cell--12-col mdl-center">
         <a href="/qa">
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent scenebutton">
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored scenebutton">
             QA
           </button>
         </a>
+      </div>
+      <div class="mdl-cell mdl-cell--12-col mdl-center">
+        <b>Troubleshooting</b><br>
+        All hardware and software functionalities
       </div>
     </div>
   </body>
