--- a/src/views/qa.html
+++ b/src/views/qa.html
@@ -296,38 +296,38 @@
         /* Elevators */
         $( "#rotate-all" ).click(function() {
           console.log('rotate all');
-          socket.emit('rotate-all', { my: 'data' });
+          socket.emit('rotateAll', { my: 'data' });
         });
 
         $( "#rotate-one" ).click(function() {
           console.log('rotate one');
-          socket.emit('rotate-one', { my: 'data' });
+          socket.emit('rotateOne', { my: 'data' });
         });
         
         $( "#rotate-two" ).click(function() {
           console.log('rotate two');
-          socket.emit('rotate-two', { my: 'data' });
+          socket.emit('rotateTwo', { my: 'data' });
         });
         
         $( "#rotate-three" ).click(function() {
           console.log('rotate three');
-          socket.emit('rotate-three', { my: 'data' });
+          socket.emit('rotateThree', { my: 'data' });
         });
         
         $( "#rotate-four" ).click(function() {
           console.log('rotate four');
-          socket.emit('rotate-four', { my: 'data' });
+          socket.emit('rotateFour', { my: 'data' });
         });
 
         /* Other buttons */
         $( "#fans-on" ).click(function() {
           console.log('turning fans on');
-          socket.emit('fans-on', { my: 'data' });
+          socket.emit('fansOn', { my: 'data' });
         });
 
         $( "#fans-off" ).click(function() {
           console.log('turning fans off');
-          socket.emit('fans-off', { my: 'data' });
+          socket.emit('fansOff', { my: 'data' });
         });
 
         $( "#test" ).click(function() {
