disable submit button in READY game state
Forces users to get out of READY state before rebinding player information.

--- a/src/views/guest.html
+++ b/src/views/guest.html
@@ -255,6 +255,9 @@
         // enable all fields
         enableFields();
 
+        // disable submit button
+        $('#submit').prop('disabled', true);
+
         // update player data view
         updatePlayerDataView();
       }
