--- a/src/views/gameplay.html
+++ b/src/views/gameplay.html
@@ -412,6 +412,11 @@
           }
         });
       });
+
+      /* Dialog prompt before refresh to prevent accidental page refresh */
+      window.onbeforeunload = function() {
+        return "Dude, are you sure you want to leave? Think of the kittens!";
+      }
     </script>
 
     <dialog class="mdl-dialog">
