replaced wav files with mp3

--- a/src/views/gameplay.html
+++ b/src/views/gameplay.html
@@ -602,7 +602,7 @@
 
     <!-- AUDIO -->
     <audio id="notification" preload="none"> 
-      <source src="audio/notification.wav" type="audio/wav">
+      <source src="audio/notification.mp3" type="audio/mp3">
     </audio>
     <!-- END AUDIO -->
   </body>
