reset player ison and update player connections on setup
Forces another check if player is connected or not.

--- a/src/views/guest.html
+++ b/src/views/guest.html
@@ -242,6 +242,15 @@
 
         // update player data view
         updatePlayerDataView();
+
+        // update player connection
+        socket.emit('sendHandshakeToPlayer', { my: 'data' });
+
+        // reset ison for all players
+        $('.mdl-js-switch')[0].click();
+        $('.mdl-js-switch')[1].click();
+        $('.mdl-js-switch')[2].click();
+        $('.mdl-js-switch')[3].click();
       }
 
       function readyState() {
