added reset state
Force refresh on guest page when reset. This will automatically recheck player connection but does not prevent users from checking ison if player already has been checked.

--- a/src/views/guest.html
+++ b/src/views/guest.html
@@ -353,7 +353,6 @@
       socket.on('currentState', function(data) {
         if(data == 0) {
           setupState();
-          location.reload();
           console.log('setup');
         } else if(data == 1) {
           readyState();
@@ -362,7 +361,11 @@
           ingameState();
           console.log('ingame');
         } else if(data == 3) {
+          location.reload();
           console.log('end');
+        } else if(data == 4) {
+          location.reload();
+          console.log('reset');
         } else {
           console.log('invalid currentState');
         }
